mudança da cor do background

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+  background: linear-gradient(90deg, #0e0036 0%, #44749d 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,8 +66,8 @@ body {
 }
 
 .form button {
-  background-color: #fc00ff;
-  border: 2px solid #fc00ff;
+  background-color: #44749d;
+  border: 2px solid #44749d;
   color: #fff;
   font-size: 14px;
   width: 100%;
